--- a/index.html
+++ b/index.html
@@ -209,17 +209,13 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
+            Seasoned IT and Cybersecurity professional with over 5 years of experience in enhancing security postures, incident response, and threat mitigation. 
 
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Demonstrated success in reducing security incidents by 40%, streamlining patch management, and increasing system efficiency. 
+            
+            Skilled in SharePoint development, user support, and crossfunctional collaboration to drive impactful security and IT initiatives. 
+            
+            Proven ability to manage complex IT environments and deliver high user satisfaction.
           </p>
         </section>
 
@@ -532,41 +528,24 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Towson University</h4>
 
-              <span>2007 — 2008</span>
+              <span>2015 — 2017</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Bachelor of Science: Information Technology
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Wheaton High School</h4>
 
-              <span>2006 — 2007</span>
-
-              <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
+              <span>2009 — 2013</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                General Diploma
               </p>
 
             </li>
@@ -589,14 +568,19 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">SharePoint Developer</h4>
 
-              <span>2015 — Present</span>
+              <span>April 2024 — Present</span>
 
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+              <li class="timeline-text">Extensive Knowledge of creating Sites, Site Columns, Lists, List Views, Site Templates, Wikis sites, Team Sites, and collaboration features.</li>
+              <li class="timeline-text">Knowledge of developing web parts and extensions using the SharePoint Framework (SPFx).</li><br>
+              <li class="timeline-text">Cross-collaborated with multiple departments & executed the branding of SharePoint sites while also creating unique master pages, page layouts, and themes.</li><br>
+              <li class="timeline-text">Strong understanding of SharePoint security, authentication, and authorization models, including Active Directory, and SAML for SSO.</li><br>
+              <li class="timeline-text">Satisfied business needs by implementing Custom Workflows using Microsoft Flow and Visual Studio that update column values, set unique permissions, and send notification emails.</li><br>
+              <li class="timeline-text">Created Synchronous and Asynchronous event receivers in Visual Studio to handle events.</li><br>
+              <li class="timeline-text">Gathering requirements from the work streams regarding the information architecture & site permissions, providing site design reviews, developing applications, and documenting technical specs.</li><br>
+              <li class="timeline-text">Experience in troubleshooting SharePoint issues, performance tuning, and optimization.</li><br>
+              <li class="timeline-text">Strong working experience with both SharePoint on-premise and SharePoint Online Versions.</li><br>
               </p>
 
             </li>
