--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+1" class="contact-link">Available Via Email</a>
+              <a href="tel:+1" class="contact-link">available via email</a>
             </div>
 
           </li>
