--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Learning to develo iOS and Android applications.
                 </p>
               </div>
 
@@ -289,7 +289,7 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I enjoy finding the creative and artistic side of life moments thru the lens of a camera.
                 </p>
               </div>
 
@@ -321,11 +321,9 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Dagmawi was hired to create a corporate identity. We were very pleased with the work done. He has a
                     lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    and is very concerned about the needs of client. Highly recommended. 
                   </p>
                 </div>
 
@@ -343,9 +341,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -365,9 +361,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -387,9 +381,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                    Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
                     elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                   </p>
@@ -433,9 +425,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                  lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
+                  Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
                   elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
                 </p>
@@ -561,16 +551,17 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Professional Experience</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">SharePoint Developer</h4>
+              <h4 class="h4 timeline-item-title">SharePoint Developer - Henry Jackson Foundation for the Advancement of Military Medicine</h4>
 
               <span>April 2024 — Present</span>
+              <span>DoD Clearance Level: Secret</span>
 
               <li class="timeline-text">Extensive Knowledge of creating Sites, Site Columns, Lists, List Views, Site Templates, Wikis sites, Team Sites, and collaboration features.</li>
               <li class="timeline-text">Knowledge of developing web parts and extensions using the SharePoint Framework (SPFx).</li><br>
