--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What I'm doing at the moment:</h3>
+          <h3 class="h3 service-title">What I'm doing currently:</h3>
 
           <ul class="service-list">
 
@@ -273,7 +273,7 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Learning to develo iOS and Android applications.
+                  Learning to develop iOS and Android applications.
                 </p>
               </div>
 
@@ -610,7 +610,7 @@
 
         <section class="skill">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">Core Competencies</h3>
 
           <ul class="skills-list content-card">
 
@@ -1121,7 +1121,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49610.86584572613!2d-77.05907773370731!3d38.999819255455094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7cf4e666ae927%3A0x8433a865b29adf!2sSilver%20Spring%2C%20MD!5e0!3m2!1sen!2sus!4v1737240144534!5m2!1sen!2sus"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
