--- a/index.html
+++ b/index.html
@@ -559,10 +559,10 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">SharePoint Developer - Henry Jackson Foundation for the Advancement of Military Medicine</h4>
-
-              <span>April 2024 — Present</span>
               <span>DoD Clearance Level: Secret</span>
 
+              <span>April 2024 — Present</span>
+            
               <li class="timeline-text">Extensive Knowledge of creating Sites, Site Columns, Lists, List Views, Site Templates, Wikis sites, Team Sites, and collaboration features.</li>
               <li class="timeline-text">Knowledge of developing web parts and extensions using the SharePoint Framework (SPFx).</li><br>
               <li class="timeline-text">Cross-collaborated with multiple departments & executed the branding of SharePoint sites while also creating unique master pages, page layouts, and themes.</li><br>
@@ -572,35 +572,41 @@
               <li class="timeline-text">Gathering requirements from the work streams regarding the information architecture & site permissions, providing site design reviews, developing applications, and documenting technical specs.</li><br>
               <li class="timeline-text">Experience in troubleshooting SharePoint issues, performance tuning, and optimization.</li><br>
               <li class="timeline-text">Strong working experience with both SharePoint on-premise and SharePoint Online Versions.</li><br>
-              </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Information Security Specialist - Supernus Pharmaceutical Inc.</h4>
 
-              <span>2013 — 2015</span>
+              <span>December 2021 - March 2024</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <li class="timeline-text">Performed SOC analysis and monitored network traffic for security threats using tools such as CrowdStrike, Exabeam, Defender, and Tanium to create immediate remediation tickets.</li><br>
+              <li class="timeline-text">Drafted and published security policies, directly resulting in a strengthened defense against advanced persistent threats and a 30% reduction in vulnerability exploitation.</li><br>
+              <li class="timeline-text">Using Tanium, pioneered a comprehensive automated patch management system, decreasing patch deployment time by 50%.</li><br>
+              <li class="timeline-text">Provides cybersecurity recommendations to leadership based on significant threats and vulnerabilities</li><br>
+              <li class="timeline-text">Spearheaded the implementation of 30-50, Level 1 & 2, CIS endpoint hardening controls that improved our overall security assessment by 20%.</li><br>
+              <li class="timeline-text">Developed and launched a KnowBe4 security awareness program that decreased overall company phishing susceptibility by 40%.</li><br>
+              <li class="timeline-text">Curated weekly cybersecurity report/insight, providing actionable tasks to the Operations team.</li><br>
+              <li class="timeline-text">Participated in the company's ever external/internal penetration testing, resulting in insightful and actionable tasks that improved our overall security posture score.</li><br>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Support Service Specialist II - Supernus Pharmaceutical Inc.</h4>
 
-              <span>2010 — 2013</span>
+              <span>August 2018 - December 2021</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+              <li class="timeline-text">Diagnosed and resolved technical issues, achieving a 95% satisfaction rate from end-users.</li><br>
+              <li class="timeline-text">Managed incoming tickets, calls, and in-person requests from over 600+ employees.</li><br>
+              <li class="timeline-text">Streamlined user account management processes in a timely manner, increasing system efficiency by 20%.</li><br>
+              <li class="timeline-text">Configured hardware, devices, and software to set up workstations for employees.</li><br>
+              <li class="timeline-text">Provided end-user system and equipment training.</li><br>
+              <li class="timeline-text">Collaborated with outside departments to implement system-wide improvements.</li><br>
+              <li class="timeline-text">Played a pivotal role in the upgrade and integration of new software systems, enhancing productivity across the company.</li><br>
+              <li class="timeline-text">Provided support for network infrastructure and baseline configurations.</li><br>
+              <li class="timeline-text">Documented technical issues and solutions to enable tracking history and maintain accurate logs.</li><br>
 
             </li>
 
