--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
           <h1 class="name" title="Dagmawi Eshete">Dagmawi Eshete</h1>
 
           <p class="title">SharePoint Developer & Cybersecurity Professional</p>
+
+          <p class="title">DoD Clearance Level: Secret</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -128,20 +130,8 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon class = "socials-icons" name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon class = "socials-icons" name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon class = "socials-icons" name="logo-instagram"></ion-icon>
+            <a href="https://www.linkedin.com/in/dagmawieshete/" class="social-link">
+              <ion-icon class = "socials-icons" name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
