--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Dagmawi Eshete">Dagmawi Eshete</h1>
 
-          <p class="title">SharePoint Developer & Cybersecurity Professional</p>
-
+          <p class="title">SharePoint Developer & Cybersecurity Professional</p><br>
           <p class="title">DoD Clearance Level: Secret</p>
         </div>
 
