--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1 class="name" title="Dagmawi Eshete">Dagmawi Eshete</h1>
 
           <p class="title">SharePoint Developer & Cybersecurity Professional</p><br>
-          <p class="info_more-btn">DoD Clearance Level: Secret</p>
+          <p class="info_more-btn title">DoD Clearance Level: Secret</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
