--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Dagmawi Eshete" height="80" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Dagmawi Eshete" height="90" width="80">
         </figure>
 
         <div class="info-content">
           <h1 class="name" title="Dagmawi Eshete">Dagmawi Eshete</h1>
 
-          <p class="title">SharePoint Developer & Cybersecurity Professional</p><br>
-          <p class="info_more-btn title">DoD Clearance Level: Secret</p>
+          <p class="title">SharePoint Developer & Cybersecurity Professional</p>
+          <p style="margin-top: 8px;" class="title">DoD Clearance Level: Secret</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
