--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- filepath: c:\Dags Portfolio\vCardResume\index.html -->
+  <head>
+    <!-- ...existing code... -->
+    <meta name="description" content="Dagmawi Eshete's personal portfolio showcasing skills, experience, and projects in IT and Cybersecurity.">
+    <meta name="keywords" content="Dagmawi Eshete, IT, Cybersecurity, SharePoint Developer, Portfolio">
+    <meta name="author" content="Dagmawi Eshete">
+    <!-- ...existing code... -->
+  </head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,10 +49,11 @@
 
       <div class="sidebar-info">
 
+        <!-- filepath: c:\Dags Portfolio\vCardResume\index.html -->
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Dagmawi Eshete" height="120" width="80">
+          <img src="./assets/images/my-avatar.png" srcset="./assets/images/my-avatar-120w.png 120w, ./assets/images/my-avatar-80w.png 80w" sizes="(max-width: 600px) 80px, 120px" alt="Dagmawi Eshete" height="120" width="80">
         </figure>
-
+        
         <div class="info-content">
           <h1 class="name" title="Dagmawi Eshete">Dagmawi Eshete</h1>
 
@@ -52,9 +61,9 @@
           <p style="margin-top: 8px;" class="title">DoD Clearance Level: Secret</p>
         </div>
 
-        <button class="info_more-btn" data-sidebar-btn>
+        <!-- filepath: c:\Dags Portfolio\vCardResume\index.html -->
+        <button class="info_more-btn" data-sidebar-btn aria-label="Show Contacts">
           <span>Show Contacts</span>
-
           <ion-icon name="chevron-down"></ion-icon>
         </button>
 
@@ -552,15 +561,15 @@
 
               <span>April 2024 — Present</span>
             
-              <li class="timeline-text">Extensive Knowledge of creating Sites, Site Columns, Lists, List Views, Site Templates, Wikis sites, Team Sites, and collaboration features.</li>
-              <li class="timeline-text">Knowledge of developing web parts and extensions using the SharePoint Framework (SPFx).</li><br>
-              <li class="timeline-text">Cross-collaborated with multiple departments & executed the branding of SharePoint sites while also creating unique master pages, page layouts, and themes.</li><br>
-              <li class="timeline-text">Strong understanding of SharePoint security, authentication, and authorization models, including Active Directory, and SAML for SSO.</li><br>
-              <li class="timeline-text">Satisfied business needs by implementing Custom Workflows using Microsoft Flow and Visual Studio that update column values, set unique permissions, and send notification emails.</li><br>
-              <li class="timeline-text">Created Synchronous and Asynchronous event receivers in Visual Studio to handle events.</li><br>
-              <li class="timeline-text">Gathering requirements from the work streams regarding the information architecture & site permissions, providing site design reviews, developing applications, and documenting technical specs.</li><br>
-              <li class="timeline-text">Experience in troubleshooting SharePoint issues, performance tuning, and optimization.</li><br>
-              <li class="timeline-text">Strong working experience with both SharePoint on-premise and SharePoint Online Versions.</li><br>
+              <li class="timeline-text">-Extensive Knowledge of creating Sites, Site Columns, Lists, List Views, Site Templates, Wikis sites, Team Sites, and collaboration features.</li>
+              <li class="timeline-text">-Knowledge of developing web parts and extensions using the SharePoint Framework (SPFx).</li>
+              <li class="timeline-text">-Cross-collaborated with multiple departments & executed the branding of SharePoint sites while also creating unique master pages, page layouts, and themes.</li>
+              <li class="timeline-text">-Strong understanding of SharePoint security, authentication, and authorization models, including Active Directory, and SAML for SSO.</li>
+              <li class="timeline-text">-Satisfied business needs by implementing Custom Workflows using Microsoft Flow and Visual Studio that update column values, set unique permissions, and send notification emails.</li>
+              <li class="timeline-text">-Created Synchronous and Asynchronous event receivers in Visual Studio to handle events.</li>
+              <li class="timeline-text">-Gathering requirements from the work streams regarding the information architecture & site permissions, providing site design reviews, developing applications, and documenting technical specs.</li>
+              <li class="timeline-text">-Experience in troubleshooting SharePoint issues, performance tuning, and optimization.</li>
+              <li class="timeline-text">-Strong working experience with both SharePoint on-premise and SharePoint Online Versions.</li><br>
 
             </li>
 
@@ -570,14 +579,14 @@
 
               <span>December 2021 - March 2024</span>
 
-              <li class="timeline-text">Performed SOC analysis and monitored network traffic for security threats using tools such as CrowdStrike, Exabeam, Defender, and Tanium to create immediate remediation tickets.</li><br>
-              <li class="timeline-text">Drafted and published security policies, directly resulting in a strengthened defense against advanced persistent threats and a 30% reduction in vulnerability exploitation.</li><br>
-              <li class="timeline-text">Using Tanium, pioneered a comprehensive automated patch management system, decreasing patch deployment time by 50%.</li><br>
-              <li class="timeline-text">Provides cybersecurity recommendations to leadership based on significant threats and vulnerabilities</li><br>
-              <li class="timeline-text">Spearheaded the implementation of 30-50, Level 1 & 2, CIS endpoint hardening controls that improved our overall security assessment by 20%.</li><br>
-              <li class="timeline-text">Developed and launched a KnowBe4 security awareness program that decreased overall company phishing susceptibility by 40%.</li><br>
-              <li class="timeline-text">Curated weekly cybersecurity report/insight, providing actionable tasks to the Operations team.</li><br>
-              <li class="timeline-text">Participated in the company's ever external/internal penetration testing, resulting in insightful and actionable tasks that improved our overall security posture score.</li><br>
+              <li class="timeline-text">-Performed SOC analysis and monitored network traffic for security threats using tools such as CrowdStrike, Exabeam, Defender, and Tanium to create immediate remediation tickets.</li>
+              <li class="timeline-text">-Drafted and published security policies, directly resulting in a strengthened defense against advanced persistent threats and a 30% reduction in vulnerability exploitation.</li>
+              <li class="timeline-text">-Using Tanium, pioneered a comprehensive automated patch management system, decreasing patch deployment time by 50%.</li>
+              <li class="timeline-text">-Provides cybersecurity recommendations to leadership based on significant threats and vulnerabilities</li>
+              <li class="timeline-text">-Spearheaded the implementation of 30-50, Level 1 & 2, CIS endpoint hardening controls that improved our overall security assessment by 20%.</li>
+              <li class="timeline-text">-Developed and launched a KnowBe4 security awareness program that decreased overall company phishing susceptibility by 40%.</li>
+              <li class="timeline-text">-Curated weekly cybersecurity report/insight, providing actionable tasks to the Operations team.</li>
+              <li class="timeline-text">-Participated in the company's ever external/internal penetration testing, resulting in insightful and actionable tasks that improved our overall security posture score.</li><br>
 
             </li>
 
@@ -587,15 +596,15 @@
 
               <span>August 2018 - December 2021</span>
 
-              <li class="timeline-text">Diagnosed and resolved technical issues, achieving a 95% satisfaction rate from end-users.</li><br>
-              <li class="timeline-text">Managed incoming tickets, calls, and in-person requests from over 600+ employees.</li><br>
-              <li class="timeline-text">Streamlined user account management processes in a timely manner, increasing system efficiency by 20%.</li><br>
-              <li class="timeline-text">Configured hardware, devices, and software to set up workstations for employees.</li><br>
-              <li class="timeline-text">Provided end-user system and equipment training.</li><br>
-              <li class="timeline-text">Collaborated with outside departments to implement system-wide improvements.</li><br>
-              <li class="timeline-text">Played a pivotal role in the upgrade and integration of new software systems, enhancing productivity across the company.</li><br>
-              <li class="timeline-text">Provided support for network infrastructure and baseline configurations.</li><br>
-              <li class="timeline-text">Documented technical issues and solutions to enable tracking history and maintain accurate logs.</li><br>
+              <li class="timeline-text">-Diagnosed and resolved technical issues, achieving a 95% satisfaction rate from end-users.</li>
+              <li class="timeline-text">-Managed incoming tickets, calls, and in-person requests from over 600+ employees.</li>
+              <li class="timeline-text">-Streamlined user account management processes in a timely manner, increasing system efficiency by 20%.</li>
+              <li class="timeline-text">-Configured hardware, devices, and software to set up workstations for employees.</li>
+              <li class="timeline-text">-Provided end-user system and equipment training.</li>
+              <li class="timeline-text">-Collaborated with outside departments to implement system-wide improvements.</li>
+              <li class="timeline-text">-Played a pivotal role in the upgrade and integration of new software systems, enhancing productivity across the company.</li>
+              <li class="timeline-text">-Provided support for network infrastructure and baseline configurations.</li>
+              <li class="timeline-text">-Documented technical issues and solutions to enable tracking history and maintain accurate logs.</li><br>
 
             </li>
 
